--- a/weatherProject/src/App.css
+++ b/weatherProject/src/App.css
@@ -111,7 +111,7 @@
           backdrop-filter: blur(30px);
   opacity: 90%;
   box-sizing: border-box;
-  padding: 20px;
+  padding: 1vw !important;
 }
 .body .container .main .firstSection .selectTime .selectValuebox {
   width: 10vw;
@@ -159,12 +159,12 @@
 }
 .body .container .main .realtimeWeatherArea .realtimeWeather {
   height: 100%;
-  font-size: 1.3vw;
 }
 .body .container .main .realtimeWeatherArea .realtimeWeather h2 {
   font-family: "Nanum Gothic", serif;
   font-weight: 600;
   color: white;
+  font-size: 1.3vw;
   font-weight: normal;
   text-align: center;
 }
@@ -351,8 +351,13 @@
   opacity: 90%;
   height: 30%;
 }
+.body .container .secondSection .b2 .text {
+  font-size: 1vw;
+  text-align: center;
+  margin: 0.54vw 0;
+}
 .body .container .secondSection .b2 .chart {
-  height: 11vw !important;
+  height: 9vw !important;
 }
 .body .container .secondSection .b2 .chart Line {
   stroke: #3d4754;
@@ -362,16 +367,19 @@
 }
 .body .container .secondSection .b2 .chartInfo {
   width: 30.4vw;
+  height: 1vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-left: 0.5vw;
+  margin-top: 0.3vw;
 }
 .body .container .secondSection .b2 .chartInfo .text-center {
-  margin-top: -0.6vw;
-  font-size: 1.2vw;
+  text-align: center;
+  font-size: 0.7vw;
 }
 .body .container .secondSection .b2 .chartInfo .text-center .text-sm {
+  color: #000;
   font-size: 0.8vw;
   text-align: center;
 }
@@ -418,10 +426,12 @@
 .body .container .thirdSection .c .c2-1 .ml,
 .body .container .thirdSection .c .c2-2 .ml,
 .body .container .thirdSection .c .c2-3 .ml {
+  text-align: center;
   position: absolute;
-  top: 8.5vw;
-  left: 4.4vw;
+  top: 8.2vw;
+  left: 4.6vw;
   font-size: 1vw;
+  text-align: center;
 }
 .body .container .thirdSection .c .c2-1 .circleperTitle,
 .body .container .thirdSection .c .c2-2 .circleperTitle,
@@ -539,7 +549,14 @@
   margin: auto;
   display: block;
   width: 90%;
-  height: 12vw;
+  height: 10vw !important;
+  min-height: 120px;
+}
+.body .container .thirdSection .c1 .temperatureGraph ul {
+  margin-left: 4vw !important;
+}
+.body .container .thirdSection .c1 .temperatureGraph span {
+  font-size: 0.8vw !important;
 }
 .body .container .thirdSection .c2 {
   width: 100%;
@@ -550,7 +567,7 @@
   -webkit-backdrop-filter: blur(30px);
           backdrop-filter: blur(30px);
   opacity: 90%;
-  padding: 10px 0 20px 0;
+  padding: 10px 0 10px 0;
   font-size: 0.8vw;
   text-align: center;
   box-sizing: border-box;
@@ -570,11 +587,11 @@
 }
 .body .container .thirdSection .c2 .table {
   width: 90%;
-  height: 100%;
-  padding: 0.5vw;
+  height: 80%;
+  padding: 1vw !important;
   margin: auto;
   border: 1px solid #fff;
-  border-radius: 20px;
+  border-radius: 10px;
   overflow-y: scroll;
   overflow-x: scroll;
 }
@@ -587,7 +604,7 @@
   color: #ffffff;
 }
 .body .container .thirdSection .c2 .table .tableMain .customtbody .customtr .customtd {
-  width: 200px;
+  width: 20vw;
   word-break: break-all;
   border-bottom: 1px solid #dedede;
   color: #ffffff;
@@ -635,7 +652,8 @@
 }
 .body.dark .container .main {
   width: 100%;
-  height: calc(100vh - 60px);
+  height: -moz-fit-content;
+  height: fit-content;
   display: flex;
   justify-content: space-between;
 }
@@ -655,7 +673,6 @@
   border-radius: 10px;
   box-shadow: 5px 5px 10px #535353;
   box-sizing: border-box;
-  padding: 20px;
 }
 .body.dark .container .main .firstSection .selectTime .selectValuebox {
   width: 10vw;
@@ -885,11 +902,19 @@
   box-shadow: 5px 5px 10px #535353;
   height: 30%;
 }
+.body.dark .container .secondSection .b2 .text {
+  font-size: 1vw;
+  text-align: center;
+  margin: 0.54vw 0;
+}
 .body.dark .container .secondSection .b2 .chart {
-  height: 11vw !important;
+  height: 9vw !important;
+}
+.body.dark .container .secondSection .b2 .chart Line {
+  stroke: #3d4754;
 }
 .body.dark .container .secondSection .b2 .chart .chartline {
-  stroke: #7b55f0;
+  stroke: #1269d4;
 }
 .body.dark .container .secondSection .b2 .chartInfo {
   width: 30.4vw;
@@ -900,9 +925,10 @@
 }
 .body.dark .container .secondSection .b2 .chartInfo .text-center {
   margin-top: -0.6vw;
-  font-size: 1.2vw;
+  font-size: 0.7vw;
 }
 .body.dark .container .secondSection .b2 .chartInfo .text-center .text-sm {
+  color: #ffffff;
   font-size: 0.8vw;
   text-align: center;
 }
@@ -1053,7 +1079,14 @@
   margin: auto;
   display: block;
   width: 90%;
-  height: 12vw;
+  height: 10vw !important;
+  min-height: 120px;
+}
+.body.dark .container .thirdSection .c1 .temperatureGraph ul {
+  margin-left: 4vw !important;
+}
+.body.dark .container .thirdSection .c1 .temperatureGraph span {
+  font-size: 0.8vw !important;
 }
 .body.dark .container .thirdSection .c2 {
   width: 100%;
@@ -1061,8 +1094,6 @@
   background-color: #303136;
   border-radius: 10px;
   box-shadow: 5px 5px 10px #535353;
-  padding: 10px 0 10px 0;
-  font-size: 0.8vw;
   text-align: center;
   box-sizing: border-box;
   font-weight: bold;
@@ -1080,8 +1111,7 @@
 }
 .body.dark .container .thirdSection .c2 .table {
   width: 90%;
-  height: 100%;
-  padding: 0.5vw;
+  height: 80%;
   margin: auto;
   border: 1px solid #fff;
   border-radius: 20px;
