--- a/weatherProject/src/App.scss
+++ b/weatherProject/src/App.scss
@@ -130,11 +130,10 @@ $MC: #e0dfdf;
                     height: 15%;
                     margin: 0 auto;
                     @include backblur2();
-
                     box-sizing: border-box;
-                    padding: 20px;
+                    padding: 1vw !important;
 
-                       .selectValuebox {
+                    .selectValuebox {
                         width: 10vw;
                         margin: auto;
                         text-align: center;
@@ -197,10 +196,11 @@ $MC: #e0dfdf;
 
                 .realtimeWeather {
                     height: 100%;
-                    font-size: 1.3vw;
 
                     h2 {
                         @include titleFont;
+                        font-size: 1.3vw;
+
                         font-weight: normal;
                         text-align: center;
 
@@ -405,8 +405,14 @@ $MC: #e0dfdf;
 
                 height: 30%;
 
+                .text {
+                    font-size: 1vw;
+                    text-align: center;
+                    margin: 0.54vw 0;
+                }
+
                 .chart {
-                    height: 11vw !important;
+                    height: 9vw !important;
 
                     Line {
                         stroke: #3d4754;
@@ -421,20 +427,23 @@ $MC: #e0dfdf;
 
                 .chartInfo {
                     width: 30.4vw;
+                    height: 1vw;
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
                     margin-left: 0.5vw;
+                    margin-top: 0.3vw;
+
 
 
 
 
                     .text-center {
-                        margin-top: -0.6vw;
-                        font-size: 1.2vw;
+                        text-align: center;
+                        font-size: 0.7vw;
 
                         .text-sm {
-
+                            color: #000;
                             font-size: 0.8vw;
                             text-align: center;
                         }
@@ -475,8 +484,6 @@ $MC: #e0dfdf;
                     width: 32%;
                     @include backblur2();
 
-
-
                     .allhighestprecipitation {
                         z-index: 2px;
                         font-size: 1.5vw;
@@ -485,13 +492,15 @@ $MC: #e0dfdf;
                     }
 
                     .ml {
+                        text-align: center;
                         position: absolute;
-                        top: 8.5vw;
-                        left: 4.4vw;
+                        top: 8.2vw;
+                        left: 4.6vw;
                         font-size: 1vw;
+                        text-align: center;
                     }
-    
-    
+
+
                     .circleperTitle {
                         margin-top: 1vw;
                         text-align: center;
@@ -500,61 +509,61 @@ $MC: #e0dfdf;
                         font-family: "Nanum Gothic", serif;
                         @include titleFont();
                     }
-    
+
                     .daytemer {
                         text-align: center;
                         font-size: 0.8vw;
                         margin-top: 2vw;
-    
+
                         .daytemerMax {
                             margin-bottom: 0.5vw;
                         }
-    
-    
+
+
                         .daytemerMin {
                             margin-bottom: 0.5vw;
                         }
-    
+
                     }
-    
+
                     .dayprec {
                         text-align: center;
                         margin-bottom: 0.5vw;
                         font-size: 0.8vw;
-    
+
                     }
-    
+
                     .dayhumidity {
                         text-align: center;
                         margin-bottom: 0.5vw;
                         font-size: 0.8vw;
-    
+
                     }
-    
+
                     .circleBox {
                         width: 100%;
                         position: relative;
                         margin-top: -2vw;
-    
-    
+
+
                         .circle {
                             display: block;
                             width: 12vw;
                             height: 12vw;
                             margin: auto;
-    
+
                             .circleIn {
                                 stroke: #d0dee9;
-    
+
                             }
-    
-    
+
+
                             .circleIn2 {
                                 stroke: #00FFFF;
                             }
-    
+
                         }
-    
+
                         .circleper {
                             position: absolute;
                             top: 5.3vw;
@@ -566,7 +575,7 @@ $MC: #e0dfdf;
                             @include titleFont();
                         }
                     }
-                    
+
                 }
             }
 
@@ -603,7 +612,19 @@ $MC: #e0dfdf;
                     margin: auto;
                     display: block;
                     width: 90%;
-                    height: 12vw;
+                    height: 10vw !important;
+                    min-height: 120px;
+
+                    ul {
+                        margin-left: 4vw !important;
+
+                    }
+
+
+
+                    span {
+                        font-size: 0.8vw !important;
+                    }
                 }
 
 
@@ -617,7 +638,7 @@ $MC: #e0dfdf;
                 height: 30%;
                 @include backblur2();
 
-                padding: 10px 0 20px 0;
+                padding: 10px 0 10px 0;
                 font-size: 0.8vw;
                 text-align: center;
                 box-sizing: border-box;
@@ -641,11 +662,11 @@ $MC: #e0dfdf;
 
                 .table {
                     width: 90%;
-                    height: 100%;
-                    padding: 0.5vw;
+                    height: 80%;
+                    padding: 1vw !important;
                     margin: auto;
                     border: 1px solid #fff;
-                    border-radius: 20px;
+                    border-radius: 10px;
                     overflow-y: scroll;
                     overflow-x: scroll;
 
@@ -668,13 +689,10 @@ $MC: #e0dfdf;
 
 
                                 .customtd {
-
-                                    width: 200px;
+                                    width: 20vw;
                                     word-break: break-all;
                                     border-bottom: 1px solid #dedede;
                                     color: #ffffff;
-
-
                                 }
                             }
                         }
@@ -728,7 +746,7 @@ $MC: #e0dfdf;
 
         .main {
             width: 100%;
-            height: calc(100vh - 60px);
+            height: fit-content;
             display: flex;
             justify-content: space-between;
 
@@ -746,7 +764,6 @@ $MC: #e0dfdf;
                     border-radius: 20px;
                     @include objcolor();
                     box-sizing: border-box;
-                    padding: 20px;
 
                     .selectValuebox {
                         width: 10vw;
@@ -1016,15 +1033,26 @@ $MC: #e0dfdf;
             .b2 {
                 width: 100%;
                 @include objcolor();
+
                 height: 30%;
 
+                .text {
+                    font-size: 1vw;
+                    text-align: center;
+                    margin: 0.54vw 0;
+                }
+
                 .chart {
-                    height: 11vw !important;
+                    height: 9vw !important;
+
+                    Line {
+                        stroke: #3d4754;
 
 
+                    }
 
                     .chartline {
-                        stroke: #7b55f0;
+                        stroke: #1269d4;
                     }
                 }
 
@@ -1035,12 +1063,15 @@ $MC: #e0dfdf;
                     align-items: center;
                     margin-left: 0.5vw;
 
+
+
+
                     .text-center {
                         margin-top: -0.6vw;
-                        font-size: 1.2vw;
+                        font-size: 0.7vw;
 
                         .text-sm {
-
+                            color: #ffffff;
                             font-size: 0.8vw;
                             text-align: center;
                         }
@@ -1163,7 +1194,7 @@ $MC: #e0dfdf;
                             text-shadow: 10px 10px 10px #1C1B20;
                             font-family: "Nanum Gothic", serif;
                         }
-                    
+
                     }
                 }
             }
@@ -1191,7 +1222,7 @@ $MC: #e0dfdf;
 
                 }
 
-                recharts-legend-wrapper{
+                recharts-legend-wrapper {
                     left: 15px;
                 }
 
@@ -1203,8 +1234,22 @@ $MC: #e0dfdf;
                     margin: auto;
                     display: block;
                     width: 90%;
-                    height: 12vw;
+                    height: 10vw !important;
+                    min-height: 120px;
+
+                    ul {
+                        margin-left: 4vw !important;
+
+                    }
+
+
+
+                    span {
+                        font-size: 0.8vw !important;
+                    }
                 }
+
+
 
 
 
@@ -1214,8 +1259,6 @@ $MC: #e0dfdf;
                 width: 100%;
                 height: 30%;
                 @include objcolor();
-                padding: 10px 0 10px 0;
-                font-size: 0.8vw;
                 text-align: center;
                 box-sizing: border-box;
                 font-weight: bold;
@@ -1237,8 +1280,7 @@ $MC: #e0dfdf;
 
                 .table {
                     width: 90%;
-                    height: 100%;
-                    padding: 0.5vw;
+                    height: 80%;
                     margin: auto;
                     border: 1px solid #fff;
                     border-radius: 20px;
