--- a/weatherProject/src/AppMB.scss
+++ b/weatherProject/src/AppMB.scss
@@ -285,7 +285,7 @@ $MC: #e0dfdf;
 
                 .secondSection {
                     width: 100%;
-                    height: 63%;
+                    height: 600px;
                     display: flex;
                     flex-wrap: wrap;
                     align-items: center;
@@ -327,15 +327,20 @@ $MC: #e0dfdf;
 
                     .b2 {
                         width: 100%;
+                        height: 200px;
                         margin: 0 auto;
                         margin-top: -17vw;
                         @include backblur2();
 
-                        height: 35%;
-
+                        .text {
+                            font-size: 3vw;
+                            @include titleFont()
+                        }
 
                         .chart {
                             height: 150px !important;
+
+
 
                             Line {
                                 stroke: #3d4754;
@@ -354,13 +359,17 @@ $MC: #e0dfdf;
                             width: 88vw;
                             justify-content: space-between;
                             margin-left: 4vw;
+                            margin-top: -1.2vw;
+
 
                             .text-center {
                                 margin-top: -0.6vw;
-                                width: 20vw !important;
-                                height: 20vw !important;
+                                width: 25vw !important;
+                                height: 25vw !important;
+                                font-size: 2vw;
 
                                 .text-sm {
+                                    color: #000000;
                                     margin-left: -3vw;
                                     font-size: 2.3vw;
                                     text-align: center;
@@ -420,9 +429,10 @@ $MC: #e0dfdf;
 
                             .ml {
                                 position: absolute;
-                                top: 21vw;
-                                left: 10.5vw;
+                                top: 17.2vw;
+                                left: 12vw;
                                 font-size: 2vw;
+                                text-align: center;
                             }
 
 
@@ -492,9 +502,9 @@ $MC: #e0dfdf;
 
                                 .circleper {
                                     position: absolute;
-                                    top: 9vw;
-                                    left: 8vw;
-                                    font-size: 6vw;
+                                    top: 10.5vw;
+                                    left: 10.5vw;
+                                    font-size: 5vw;
                                     font-weight: bold;
                                     text-shadow: 10px 10px 10px #1C1B20;
                                     font-family: "Nanum Gothic", serif;
@@ -506,10 +516,9 @@ $MC: #e0dfdf;
 
                     .c1 {
                         width: 100%;
-                        height: 180px;
+                        height: 200px;
                         @include backblur2();
-
-                        padding: 30px;
+                        padding: 2vw;
                         box-sizing: border-box;
                         position: relative;
                         margin-top: 5vw;
@@ -531,13 +540,13 @@ $MC: #e0dfdf;
 
                         .temperatureGraph {
                             position: absolute;
-                            top: 10vw;
-                            left: 0;
+                            top: 5vw;
+                            left: -5vw;
                             border-radius: 10px;
                             margin: auto;
                             display: block;
-                            width: 90%;
-                            height: 120px;
+                            width: 95%;
+                            height: 180px;
                         }
 
 
@@ -867,7 +876,7 @@ $MC: #e0dfdf;
 
                 .secondSection {
                     width: 100%;
-                    height: 63%;
+                    height: 600px;
                     display: flex;
                     flex-wrap: wrap;
                     align-items: center;
@@ -910,15 +919,20 @@ $MC: #e0dfdf;
 
                     .b2 {
                         width: 100%;
+                        height: 200px;
                         margin: 0 auto;
                         margin-top: -17vw;
                         @include objcolor();
 
-                        height: 35%;
-
+                        .text {
+                            font-size: 3vw;
+                            @include titleFont()
+                        }
 
                         .chart {
                             height: 150px !important;
+
+
 
                             Line {
                                 stroke: #3d4754;
@@ -927,7 +941,7 @@ $MC: #e0dfdf;
                             }
 
                             .chartline {
-                                stroke: #7b55f0;
+                                stroke: #1269d4;
 
                             }
                         }
@@ -937,13 +951,17 @@ $MC: #e0dfdf;
                             width: 88vw;
                             justify-content: space-between;
                             margin-left: 4vw;
+                            margin-top: -1.2vw;
+
 
                             .text-center {
                                 margin-top: -0.6vw;
-                                width: 20vw !important;
-                                height: 20vw !important;
+                                width: 25vw !important;
+                                height: 25vw !important;
+                                font-size: 2vw;
 
                                 .text-sm {
+                                    color: #fff;
                                     margin-left: -3vw;
                                     font-size: 2.3vw;
                                     text-align: center;
@@ -1004,9 +1022,10 @@ $MC: #e0dfdf;
 
                             .ml {
                                 position: absolute;
-                                top: 21vw;
-                                left: 10.5vw;
+                                top: 17.2vw;
+                                left: 12vw;
                                 font-size: 2vw;
+                                text-align: center;
                             }
 
 
