--- a/weatherProject/src/AppMB.css
+++ b/weatherProject/src/AppMB.css
@@ -5,12 +5,13 @@
     height: fit-content;
     padding-bottom: 5vw;
     background-repeat: repeat-y;
+    overflow-y: auto;
   }
   .body .container .header p {
     font-size: 4vw;
     text-align: center;
-    margin: 0;
     border-radius: 10px;
+    margin-left: 5vw;
   }
   .body .container .header button {
     width: 70px;
@@ -535,6 +536,7 @@
     font-size: 4vw;
     text-align: center;
     margin: 0;
+    margin-left: 5vw;
     border-radius: 10px;
   }
   .body.dark .container .header button {
